syntax = "proto3";
package com.proto;
option java_package = "com.proto";
option java_multiple_files = true;

import "base_response.proto";

message ProtoGuideCreateDto {
  int64 user_id = 1;
  int64 user_telegram_id = 2;
  string language_names = 3;
  string region_names = 4;
  string description = 5;
  bool has_car = 6;
  string transport = 7;
}

message ProtoGuideDto {
  int64 id = 1;
  string date_created = 2;
  string date_updated = 3;
  string language_names = 4;
  string region_names = 5;
  string files = 6;
  string description = 7;
  bool is_verified = 8;
  bool has_car = 9;
  string transport = 10;
  bool is_active = 11;
  bool is_blocked = 12;
  ProtoUserDto user = 13;
}

message ProtoGuideDtoList {
  repeated ProtoGuideDto items = 1;
}

message ProtoUserDto {
  int64 id = 1;
  string date_created = 2;
  string date_updated = 3;
  string first_name = 4;
  string last_name = 5;
  string birth_date = 6;
  int64 telegram_id = 7;
  string telegram_username = 8;
  string phone_numbers = 9;
  bool is_active = 10;
  bool is_blocked = 11;
}

message ProtoGuideFilterDto {
  string from = 1;
  string to = 2;
  string language_names = 3;
  string region_names = 4;
  string comment = 5;
  bool has_car = 6;
  int32 page = 7;
  int32 page_size = 8;
}

service ProtoGuideService {
  rpc save(ProtoGuideCreateDto) returns (ProtoBaseResponse) {};
  rpc update(ProtoGuideCreateDto) returns (ProtoBaseResponse) {};
  rpc search(ProtoGuideFilterDto) returns (ProtoBaseResponse) {};
}